--- a/ansible/roles/createImage/tasks/CreateImage.yml
+++ b/ansible/roles/createImage/tasks/CreateImage.yml
@@ -19,7 +19,7 @@
     - deploy
     - push_image
 
-- name: Run container
-  shell: sudo docker run -d -p 80:8080 buldozer232/spring-boot
-  tags:
-    - run_image
+# - name: Run container
+#   shell: sudo docker run -d -p 80:8080 buldozer232/spring-boot
+#   tags:
+#     - run_image
