--- a/ansible/roles/createImage/files/Dockerfile
+++ b/ansible/roles/createImage/files/Dockerfile
@@ -1,9 +1,9 @@
 FROM java:8-jdk-alpine
 
-COPY spring-boot.jar /usr/app/
+COPY spring-boot-smoke-test-web-ui-2.2.1.BUILD-SNAPSHOT.jar /usr/app/
 
 WORKDIR /usr/app
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "spring-boot.jar"]
+ENTRYPOINT ["java", "-jar", "spring-boot-smoke-test-web-ui-2.2.1.BUILD-SNAPSHOT.jar"]
