--- a/ansible/roles/run-image/tasks/runImage.yml
+++ b/ansible/roles/run-image/tasks/runImage.yml
@@ -1,4 +1,9 @@
 ---
+ - name: Pull container
+   shell: sudo docker pull buldozer232/spring-boot
+   tags:
+     - run_image
+
  - name: Run container
    shell: sudo docker run -d -p 80:8080 buldozer232/spring-boot
    tags:
