--- a/ansible/roles/run-image/tasks/runImage.yml
+++ b/ansible/roles/run-image/tasks/runImage.yml
@@ -1,10 +1,10 @@
 ---
  - name: Pull container
-   shell: sudo docker pull buldozer232/spring-boot
+   shell: sudo docker pull {{ container }}
    tags:
      - run_image
 
  - name: Run container
-   shell: sudo docker run -d -p 80:8080 buldozer232/spring-boot
+   shell: sudo docker run -d -p {{ port }}:8080 {{ container }}
    tags:
      - run_image
