--- a/ansible/roles/run-image/tasks/runImage.yml
+++ b/ansible/roles/run-image/tasks/runImage.yml
@@ -3,11 +3,12 @@
    shell: sudo docker pull {{ container }}
    tags:
      - run_image
-     
+
  - name: Kill container
    service: name=docker state=restarted
    tags:
      - run_image
+     - kill_container
 
  - name: Run container
    shell: sudo docker run -d -p {{ port }}:8080 {{ container }}
